--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,23 @@
 
 /* Your CSS Code here. */
+.container{
+	display:flex;
+	justify-content:center;
+	flex-wrap:wrap;
+}
+
+#b1{
+	background-color:green;
+	height:100px;
+	width:100px;
+}
+#b2{
+	background-color:red;
+	height:100px;
+	width:100px;
+}
+#b3{
+	background-color:blue;
+	height:100px;
+	width:100px;
+}
