--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 
 /* Your CSS Code here. */
 .container{
-	display:grid;
-	grid-template-columns:1fr 1fr 1fr;
+	display:flex;
+	flex-wrap:wrap;
 	justify-content:center;
 	
 }
